// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [server] 1`] = `
"
const port = 1234

export default port
"
`;

exports[`config with process.env works correctly [server] 1`] = `
"
const port = (((first, second) => (first != null ? first : second))(process.env[\\"PORT\\"], null))

export default port
"
`;
